--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="nav">
             <div id="nav-links">
                 <h1 id="logo">
-                   R!deeezzsss
+                   R!dez
                 </h1>
                 <div id="menu">
                    <a href="">Our Cabs</a>
