--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                </div>
             </div>
             <div class="icon-sec">
-               <div class="icon"><img src="./images/service-img-1.png" alt=""></div>
+               <img src="./images/service-img-1.png" alt="">
             </div>
          </div>
          <div class="service-box">  
@@ -103,7 +103,7 @@
                </div>
             </div>
             <div class="icon-sec">
-               <div class="icon"><img src="./images/service-img-1.png" alt=""></div>
+               <img src="./images/service-img-1.png" alt="">
             </div>
          </div>
          </div>
