--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         </div>
                         <div class="bottom">
                            <h3>MPVs</h3>
-                           <a href="" class="btn">Inquire Now</a>
+                           <a href="" class="btn">Send request</a>
                         </div>
                      </div>
                   </div>
@@ -133,7 +133,7 @@
                         </div>
                         <div class="bottom">
                            <h3>SEDANS</h3>
-                           <a href="" class="btn">Inquire Now</a>
+                           <a href="" class="btn">Send request</a>
                         </div>
                      </div>
                   </div>
@@ -144,7 +144,7 @@
                         </div>
                         <div class="bottom">
                            <h3>SUvs</h3>
-                           <a href="" class="btn">Inquire Now</a>
+                           <a href="" class="btn">Send request</a>
                         </div>
                      </div>
                   </div>
@@ -155,7 +155,7 @@
                         </div>
                         <div class="bottom">
                            <h3>Hatchback</h3>
-                           <a href="" class="btn">Inquire Now</a>
+                           <a href="" class="btn">Send request</a>
                         </div>
                      </div>
                   </div>
@@ -166,7 +166,7 @@
                         </div>
                         <div class="bottom">
                            <h3>mini van</h3>
-                           <a href="" class="btn">Inquire Now</a>
+                           <a href="" class="btn">Send request</a>
                         </div>
                      </div>
                   </div>
@@ -177,7 +177,7 @@
                         </div>
                         <div class="bottom">
                            <h3>coupe</h3>
-                           <a href="" class="btn">Inquire Now</a>
+                           <a href="" class="btn">Send request</a>
                         </div>
                      </div>
                   </div>
@@ -196,7 +196,7 @@
                   <img src="./images/saftey-1.png" alt="">
                   <div class="details">
                      <h3>Our commitment to your safety</h3>
-                     <p>You will quickly and  safely, get to the right place. 
+                     <p>You will quickly and safely, get to the right place. 
                      All our drivers have a full license, so every customer is guaranteed a reliable and high-class service.</p>
                      <a href="" class="about-btn">About Us</a>
                   </div>
@@ -205,7 +205,9 @@
                   <img src="./images/saftey-2.png" alt="">
                   <div class="details">
                      <h3>Setting 10,000+ cities in motion</h3>
-                     <p>For the trip, new modern cars are provided, in which you will be comfortable and comfortable. You'll find us in any city.</p>
+                     <p>For the trip, new modern cars are provided, in which you will be comfortable and comfortable. You'll find us in any city.
+                        Just Marking the Maps Every day.
+                     </p>
                      <a href="" class="btn1">Book Now</a>
                   </div>
                </div>
