--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                   <div class="splide__slide">
                      <div class="slide-container">
                         <div class="top">
-                           <img src="./images/swift.jpg" alt="">
+                           <img src="./images/Ertiga1.png" alt="">
                         </div>
                         <div class="bottom">
                            <h3>MPVs</h3>
@@ -129,7 +129,7 @@
                   <div class="splide__slide">
                      <div class="slide-container">
                         <div class="top">
-                           <img src="./images/swift.jpg" alt="">
+                           <img src="./images/Etios1.png" alt="">
                         </div>
                         <div class="bottom">
                            <h3>SEDANS</h3>
@@ -140,10 +140,10 @@
                   <div class="splide__slide">
                      <div class="slide-container">
                         <div class="top">
-                           <img src="./images/swift.jpg" alt="">
+                           <img src="./images/Dezire1.png" alt="">
                         </div>
                         <div class="bottom">
-                           <h3>SUvs</h3>
+                           <h3>SUVs</h3>
                            <a href="" class="btn">Send request</a>
                         </div>
                      </div>
@@ -151,7 +151,7 @@
                   <div class="splide__slide">
                      <div class="slide-container">
                         <div class="top">
-                           <img src="./images/swift.jpg" alt="">
+                           <img src="./images/Etios1.png" alt="">
                         </div>
                         <div class="bottom">
                            <h3>Hatchback</h3>
@@ -162,7 +162,7 @@
                   <div class="splide__slide">
                      <div class="slide-container">
                         <div class="top">
-                           <img src="./images/swift.jpg" alt="">
+                           <img src="./images/Etios1.png" alt="">
                         </div>
                         <div class="bottom">
                            <h3>mini van</h3>
@@ -173,7 +173,7 @@
                   <div class="splide__slide">
                      <div class="slide-container">
                         <div class="top">
-                           <img src="./images/swift.jpg" alt="">
+                           <img src="./images/Dezire1.png" alt="">
                         </div>
                         <div class="bottom">
                            <h3>coupe</h3>
