--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div id="nav">
+     
             <div id="nav-links">
                 <h1 id="logo">
                    R!dez
@@ -24,16 +25,18 @@
                 </div>
                </div>
                <div id="nav-login">
-                 <span> <i class="ri-phone-line"></i> Call Now 91-XXX </span>
+                 <span class="call-now"> <i class="ri-phone-line"></i> Call Now 91-XXX </span>
                  <div><a href="" id="contact-us">Contact us</a></div>
                   <!-- Hamburger START               -->
-<label class="burger" for="burger">
    <input type="checkbox" id="burger">
-   <span></span>
-   <span></span>
-   <span></span>
+<label class="burger" for="burger">
+   <i class="ri-menu-5-line" id="open-menu"></i>
  </label>
+ <div class="menu-2">
+  <label for="burger" class="burger"> <i class="ri-close-fill" id="close-menu"></i></label>
+ </div>
  <!-- Hamnburger END -->
+
                </div>
 
     </div>
