--- a/index.html
+++ b/index.html
@@ -249,6 +249,15 @@
        </div>
            </div>
            </div>
+           <div id="book-ride-2">
+            <div id="bookin-h">
+               <h2>Wanna book a ride ? </h2>
+            </div>
+            <div class="booking">
+               <p>Lorem ipsum dolor sit Lorem ipsum dolor sit amet.
+                  amet consectetur adipisicing elit. Hic, magnam?</p>
+            </div>
+           </div>
            <!-- footer  -------START  -->
              <div id="footer">
                <div id="footer-top">
